--- a/resources/sass/_style.sass
+++ b/resources/sass/_style.sass
@@ -314,7 +314,11 @@ a:hover
 
 .form-control
   display: inline
-  width: auto
+  width: 230px
+  margin: 0px 10px
+
+.form-control-calendar
+  width: 230px !important
   margin: 0px 10px
 
 .colcheck
@@ -330,7 +334,7 @@ a:hover
   color: #495057
   background-color: #fff
   border: 1px solid #ced4da
-  width: 100%
+  width: 230px
 
   &:hover
     color: #495057
